# tianguiswatt

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  README.md  compose.override.yml  compose.prod.yml  compose.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  release-please.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: accepted_actions.py  battery.py  bid_stack.py  events.py  health.py  history.py  profile.py  snapshot.py  story.py  timeseries.py
backend/app/core/: clickhouse.py  config.py  events.py
backend/app/queries/: accepted_actions.py  battery.py  bid_stack.py  history.py  profile.py  snapshot.py  story.py  timeseries.py  util.py
backend/app/simulation/: __init__.py  engine.py  models.py
backend/tests/: conftest.py  test_accepted_actions.py  test_battery.py  test_bid_stack.py  test_clickhouse_client.py  test_cors.py  test_events.py  test_history.py  test_profile.py  test_simulation.py  test_snapshot.py  test_story.py  test_timeseries.py
docs/: architecture.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  index.html  nginx.conf  openapi.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/tests/: battery.spec.ts  dashboard.spec.ts  story.spec.ts
orchestrator/: Dockerfile  README.md  dagster.yaml  pyproject.toml
orchestrator/src/orchestrator/: __init__.py  assets.py  carbon.py  definitions.py  elexon.py  octopus.py  pvlive.py  schedules.py  transform.py
orchestrator/tests/: conftest.py  test_bmu_registry.py  test_bod.py  test_carbon.py  test_demand.py  test_frequency.py  test_fuelinst.py  test_octopus.py  test_prices.py  test_pvlive.py
scripts/: backfill_carbon.py  backfill_prices.py  backfill_solar.py  backfill_tariff_rates.py  seed.sh
transform/: README.md  dbt_project.yml  profiles.yml
transform/seeds/: _seeds.yml  elexon_class1_profile.csv
transform/tests/: assert_mart_accepted_actions_grain_unique.sql  (+10 more)
(+70 files in other folders)
