[project]
name = 'renewable-pulse'
version = '0.1.0'
requires-python = ">=3.12"

[tool.uv.workspace]
members = ['orchestrator', 'backend', 'packages/shared']

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.14",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
# importlib mode lets multiple `tests/` dirs coexist across workspace packages
# without an __init__.py package-name clash; consider_namespace_packages stops the
# src-layout member dir (orchestrator/) from shadowing the installed package.
addopts = "--import-mode=importlib"
consider_namespace_packages = true
testpaths = ["backend/tests", "packages/shared/tests", "orchestrator/tests"]
