[project]
name = "backend"
version = "0.1.0"
description = "FastAPI serving layer for TianguisWatt"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "shared",
    "scipy>=1.18.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
